# GOIT_Homework-2_Clean_folder

./: LICENSE  README.md  setup.cfg  setup.py
Clean/: Normalize.py  __init__.py
Sorter_tool/: Clean.py  Normalizer.py  Sorter.py
clean_folder/: __init__.py  clean.py  pyvenv.cfg
clean_folder/Scripts/: activate  activate.bat
venvhm2/: pyvenv.cfg
venvhm2/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
