[metadata]
name = GOIT_homework_2_clean-folder_ZCO
version = 1.1.1
description = Sort specified folder to subfolders by their suffix (other subfolders will be disposed). Rename files to ASCII format. Unpack the archives
url = https://github.com/C-Hurtmann/GOIT_Homework-2_Clean_folder
license = MIT License
author = Constantine Zagorodnyi
author_email = Constantine2903@gmail.com

[options]

packages = find: